.metadata/.plugins/org.eclipse.cdt.ui/Laboratorio-0.build.log
19:57:43 **** Incremental Build of configuration Debug for project Laboratorio-0 ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\ControladorVideojuego.o" "..\\src\\ControladorVideojuego.cpp" 
In file included from ..\src\ControladorVideojuego.cpp:8:0:
..\src\ControladorVideojuego.h:13:24: warning: extra tokens at end of #include directive
 #include "Videojuego.h";
                        ^
..\src\ControladorVideojuego.cpp: In static member function 'static ControladorVideojuego* ControladorVideojuego::getInstanciaVideojuego()':
..\src\ControladorVideojuego.cpp:26:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Fabrica.o" "..\\src\\Fabrica.cpp" 
In file included from ..\src\Fabrica.cpp:8:0:
..\src\Fabrica.h:12:32: warning: extra tokens at end of #include directive
 #include "ControladorPartida.h";
                                ^
In file included from ..\src\Fabrica.cpp:8:0:
..\src\Fabrica.h:13:38: warning: extra tokens at end of #include directive
 #include "ControladorSuscripciones.h";
                                      ^
In file included from ..\src\Fabrica.cpp:8:0:
..\src\Fabrica.h:14:32: warning: extra tokens at end of #include directive
 #include "ControladorUsuario.h";
                                ^
In file included from ..\src\Fabrica.cpp:8:0:
..\src\Fabrica.h:15:35: warning: extra tokens at end of #include directive
 #include "ControladorVideojuego.h";
                                   ^
In file included from ..\src\Fabrica.h:15:0,
                 from ..\src\Fabrica.cpp:8:
..\src\ControladorVideojuego.h:13:24: warning: extra tokens at end of #include directive
 #include "Videojuego.h";
                        ^
..\src\Fabrica.cpp: In static member function 'static ControladorUsuario* Fabrica::obtenerInstanciaUsuario()':
..\src\Fabrica.cpp:35:51: error: 'ControladorUsuario::ControladorUsuario()' is private within this context
         instanciaUsuario = new ControladorUsuario();
                                                   ^
In file included from ..\src\Fabrica.h:14:0,
                 from ..\src\Fabrica.cpp:8:
..\src\ControladorUsuario.h:21:2: note: declared private here
  ControladorUsuario();
  ^~~~~~~~~~~~~~~~~~
..\src\Fabrica.cpp: In static member function 'static ControladorPartida* Fabrica::obtenerInstanciaPartida()':
..\src\Fabrica.cpp:42:51: error: 'ControladorPartida::ControladorPartida()' is private within this context
         instanciaPartida = new ControladorPartida();
                                                   ^
In file included from ..\src\Fabrica.h:12:0,
                 from ..\src\Fabrica.cpp:8:
..\src\ControladorPartida.h:20:2: note: declared private here
  ControladorPartida();
  ^~~~~~~~~~~~~~~~~~
..\src\Fabrica.cpp: In static member function 'static ControladorSuscripciones* Fabrica::obtenerInstanciaSuscripcion()':
..\src\Fabrica.cpp:49:61: error: 'ControladorSuscripciones::ControladorSuscripciones()' is private within this context
         instanciaSuscripcion = new ControladorSuscripciones();
                                                             ^
In file included from ..\src\Fabrica.h:13:0,
                 from ..\src\Fabrica.cpp:8:
..\src\ControladorSuscripciones.h:19:2: note: declared private here
  ControladorSuscripciones();
  ^~~~~~~~~~~~~~~~~~~~~~~~
..\src\Fabrica.cpp: In static member function 'static ControladorVideojuego* Fabrica::obtenerInstanciaVideojuego()':
..\src\Fabrica.cpp:56:35: error: expected type-specifier before 'ControladorOtro'
         instanciaVideojuego = new ControladorOtro();
                                   ^~~~~~~~~~~~~~~
..\src\Fabrica.cpp: In static member function 'static Fabrica* Fabrica::getInstanciaFabrica()':
..\src\Fabrica.cpp:30:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^

19:57:44 Build Failed. 4 errors, 8 warnings. (took 1s.37ms)

